--- a/museum_details.html
+++ b/museum_details.html
@@ -15,7 +15,7 @@
     <div id="header"></div>
     <div id="main">
         <div class="wrapper">
-            <p><span>当前位置：<a href="index.html">首页</a>&gt;博物馆一览&gt;<u></u></span></p>
+            <p><span>当前位置：<a href="index.html">首页</a>&gt;<a href="museum_search.html?gp1=全部&gp2=全部&gp3=全部&key=all&time=0&hot=0">博物馆一览</a>&gt;<u></u></span></p>
             <h3><span></span></h3>
             <div class="section_lf">
                 <div class="lf0">
