--- a/information.html
+++ b/information.html
@@ -37,6 +37,8 @@
                     <div class="zh module">
                         <p>
                             <span>综合快讯</span>
+                            <span style="font-size:16px;padding-top:3px;color:#aaa;">博物馆快讯</span>
+                            <span style="font-size:16px;padding-top:3px;color:#aaa;">业内动态</span>
                             <a href="more_information.html?CLASS=博物馆动态&ly=all">更多&gt;</a>
                         </p>
                         <div class="content">
