--- a/index_appointment.html
+++ b/index_appointment.html
@@ -19,37 +19,39 @@
         <div class="wrapper">
             <p>当前位置：参展预约</p>
             <div class="content">
-                <form>
+                <p>吉林省数字博物馆在线服务平台预约说明</p>
+                <form action="">
                     <table class="msg">
                         <tbody>
                             <tr>
-                               <td>预约内容：</td>
-                               <td colspan="2">
-                                   <select class="form-control" name="museum" id="museum">
-                                   </select>
-                               </td>
+                                <td>预约展馆：</td>
+                                <td colspan="3">
+                                    <select class="form-control" name="museum" id="museum">
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
-                               <td>预约时间：</td>
-                               <td colspan="2"><input autofocus id="date" placeholder="请输入预约时间" name="date"><p></p></td>
+                                <td>预约时间：</td>
+                                <td colspan="3"><input autofocus id="date" placeholder="请输入预约时间" name="date"><p></p></td>
                             </tr>
                             <tr>
-                               <td>预约人1：</td>
-                               <td><input class="name" type="text" name="uname1 " id="uname1" placeholder="请输入真实姓名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入真实姓名'"><p></p></td>
-                               <td><input class="id" name="uid1" id="uid1" placeholder="请输入身份证号码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入身份证号码'"><p></p></td>
+                                <td>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
+                                <td><input class="name" type="text" name="uname1 " id="uname1" placeholder="请输入真实姓名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入真实姓名'"><p></p></td>
+                                <td style="padding-left:20px">证件号码：</td>
+                                <td><input class="id" name="uid1" id="uid1" placeholder="请输入身份证号码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入身份证号码'"><p></p></td>
                             </tr>
                             <tr>
-                               <td>预约人2：</td>
-                               <td><input class="name" type="text" name="uname2" id="uname2" placeholder="请输入真实姓名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入真实姓名'"><p></p></td>
-                               <td><input class="id" name="uid2" id="uid2" placeholder="请输入省份证号码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入身份证号码'"><p></p></td>
+                                <td>姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</td>
+                                <td><input class="name" type="text" name="uname2" id="uname2" placeholder="请输入真实姓名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入真实姓名'"><p></p></td>
+                                <td style="padding-left:20px">证件号码：</td>
+                                <td><input class="id" name="uid2" id="uid2" placeholder="请输入身份证号码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入身份证号码'"><p></p></td>
                             </tr>
                         </tbody>
                     </table>
+                    <input type="button" value="添加预约人" id="adduser">
                     <input value="预约" id="submit" disabled>
                 </form>
-                <input type="button" value="添加预约人" id="adduser">
                 <div class="panel">
-                    <div class="panel-heading">吉林省数字博物馆在线服务平台预约说明</div>
                     <div class="panel-body">
                         <ol>
                             <li>一.预约说明：在线登记预约博物馆，预约时间和预约个人信息。个人观众通过网站预约门票，每人每次预约参观门票不得超过3张。</li>
