--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"  dir="ltr" lang="zh-CN" xml:lang="zh-CN">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1"/>
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/index_a.css">
-    <!--&lt;!&ndash;[if lt IE 9]>&ndash;&gt;-->
-    <!--<script type="text/javascript" src="js/PIE.js"> </script>-->
-    <!--&lt;!&ndash;<![endif]&ndash;&gt;-->
 </head>
 <body>
     <div id="header">
@@ -22,12 +19,6 @@
             <div class="wrapper1">
                 <div id="map">
                     <img src="img/JL_map.png" alt="">
-                    <!--<div class="point open">-->
-                        <!--<p>吉林省博物馆</p>-->
-                    <!--</div>-->
-                    <!--<div class="point close">-->
-                        <!--<p>博物馆</p>-->
-                    <!--</div>-->
                     <ul id="left-nav">
                         <li class="point6 c1" data-rank="0"></li>
                         <li data-rank="1" class="c2"></li>
@@ -128,16 +119,10 @@
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/unslider-min.js"></script>
     <script src="js/header.js"></script>
-    <script src="js/index.js"></script>
     <script>
         $("#header").load("include/head.html");
         $("#footer").load("include/footer.html");
-//        $(function() {
-//            $('.rounded').each(function() {
-//                PIE.attach(this);
-//            });
-//        });
     </script>
-
+    <script src="js/index.js"></script>
 </body>
 </html>
