--- a/index_appointment.html
+++ b/index_appointment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>预约</title>
     <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1"/>
     <meta name="renderer" content="webkit"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
