11-18 删除全站搜索的显示条数功能

--- a/index_global_search.html
+++ b/index_global_search.html
@@ -20,14 +20,14 @@
                 <div class="common part1">
                     <p class="title"><i></i><span>结果分类</span></p>
                     <ul>
-                        <li class="active fl"><i></i><s>全部</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>博物馆一览</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>数字博物馆</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>藏品鉴赏</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>文创产品</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>资讯</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>学术</s><span>(<u>0</u>)</span></li>
-                        <li class="fl"><i></i><s>历史吉林</s><span>(<u>0</u>)</span>               </ul>
+                        <li class="active fl"><i></i><s>全部</s><span></span></li>
+                        <li class="fl"><i></i><s>博物馆一览</s><span></span></li>
+                        <li class="fl"><i></i><s>数字博物馆</s><span></span></li>
+                        <li class="fl"><i></i><s>藏品鉴赏</s><span></span></li>
+                        <li class="fl"><i></i><s>文创产品</s><span></span></li>
+                        <li class="fl"><i></i><s>资讯</s><span></span></li>
+                        <li class="fl"><i></i><s>学术</s><span></span></li>
+                        <li class="fl"><i></i><s>历史吉林</s><span></span>               </ul>
                 </div>
                 <div class="common part2">
                     <p class="title"><i></i><span>查询范围</span></p>
