--- a/index_register.html
+++ b/index_register.html
@@ -40,8 +40,8 @@
                         <div class="row_inpt">
                             <input type="text" name="usermail" id="usermail" placeholder="请输正确的电子邮箱" onfocus="this.placeholder=''" onblur="this.placeholder='请输正确的电子邮箱'">
                         </div>
-                        <h5>asdfas</h5>
-                        <p>仅支持.com，.net，.cn，.org后缀的邮箱可以使用邮箱进行登录和找回密码</p>
+                        <h5></h5>
+                        <p>仅支持网易、139、QQ、搜狐、189、新浪、outlook、阿里云、Foxmail邮箱，可以使用邮箱进行登录和找回密码</p>
                     </div>
                     <div class="row_msg">
                         <label for="userpwd" class="line">密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
