--- a/index_find_password.html
+++ b/index_find_password.html
@@ -37,6 +37,7 @@
                         <span>登录邮箱：</span>
                         <input type="text" name="usermail" id="umail" placeholder="请输入正确的邮箱" onfocus="this.placeholder=''" onblur="this.placeholder='请输正确的邮箱'">
                     </label>
+                    <h4></h4>
                 </div>
                 <div class="code">
                     <label for="code">
@@ -44,13 +45,13 @@
                         <input type="text" name="code" id="code" placeholder="输入验证码" onfocus="this.placeholder=''" onblur="this.placeholder='输入验证码'">
                     </label>
                     <div class="codeimg">
-                        <img src="" alt="" width="145px" height="40px">
+                        <input type="button"  id="val" onclick="createCode()">
                     </div>
                 </div>
-                <button class="btn btn1">下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
+                <button class="btn btn1" onclick="validate();getcode()">下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
             </div>
             <div class="secondstep" style="display:none">
-                <p>验证码已发送到您的登录邮箱：<u>123456@qq.com</u></p>
+                <p>验证码已发送到您的登录邮箱：<u></u></p>
                 <p>请在下框中输入您的验证码</p>
                 <div class="yzcode">
                     <label for="yzcode">
@@ -66,14 +67,16 @@
                         <span>新登录密码：</span>
                         <input type="password" name="newpwd" id="newpwd" placeholder="请输入新密码" onfocus="this.placeholder=''" onblur="this.placeholder='请输入新密码'">
                     </label>
+                    <h4></h4>
                 </div>
                 <div class="qrpwd">
                     <label for="qrpwd">
                         <span>确认新密码：</span>
                         <input type="password" name="qrwpwd" id="qrpwd" placeholder="再次输入新密码" onfocus="this.placeholder=''" onblur="this.placeholder='再次输入新密码'">
                     </label>
+                    <h4></h4>
                 </div>
-                <button class="btn btn3">下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
+                <button class="btn btn3" onclick="updatepassword()">下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
             </div>
             <div class="laststep" style="display: none">
                 <div>
@@ -85,6 +88,7 @@
 </div>
 <div id="footer"></div>
 <script src="js/jquery-1.11.3.js"></script>
+<script src="layer/layer.js"></script>
 <script>
     $("#header").load("include/head.html");
     $("#footer").load("include/footer.html");
