--- a/index_register_next.html
+++ b/index_register_next.html
@@ -17,13 +17,11 @@
     <div class="top">
         <p>当前位置：注册</p>
         <h3>欢迎注册</h3>
-        <h4>已有账号</h4>
-        <button class="login">请&nbsp;&nbsp;登&nbsp;&nbsp;录</button>
     </div>
     <div class="content">
         <p>还差一步就可以完成注册</p>
-        <h4>已经向您的邮箱<span class="font-light">123456@qq.com</span>发送了确认链接，请收到邮件后确认链接。</h4>
-        <div class="btn"><button>立即去我的邮箱确认</button></div>
+        <h4>已经向您的邮箱<span class="font-light font-mail"></span>发送了确认链接，请收到邮件后确认链接。</h4>
+        <div class="btn"><button class="btn1">立即去我的邮箱确认</button></div>
         <h5>如果您收不到我们发送的邮件，请稍等片刻或者检查您的垃圾邮件。</h5>
         <h6>如果长时间未收到，请尝试换个<span class="font-light">邮箱进行注册</span></h6>
         <div class="btn"><button>已在邮箱中完成注册</button></div>
@@ -36,5 +34,6 @@
     $("#header").load("include/head.html");
     $("#footer").load("include/footer.html");
 </script>
+<script src="js/index_register_next.js"></script>
 </body>
 </html>
