--- a/index_register.html
+++ b/index_register.html
@@ -78,8 +78,8 @@
                 <div class="row_msg">
                     <span class="line">性&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;别</span>
                     <div class="row_inpt sex">
-                        <input type="radio"  value="male" name="sex" checked>男
-                        <input type="radio"  value="female" name="sex">女
+                        <input type="radio"  value="男" name="sex" checked>男
+                        <input type="radio"  value="女" name="sex">女
                     </div>
                 </div>
                 <div class="row_msg">
