--- a/index_register.html
+++ b/index_register.html
@@ -108,7 +108,7 @@
                 <div class="check_box">
                     <input type="checkbox">同意用户注册协议
                 </div>
-                <botton class="btn" id="sub" disabled="disabled"><span>提&nbsp;&nbsp;交&nbsp;&nbsp;注&nbsp;&nbsp;册</span></botton>
+                <botton class="btn" id="sub" disabled><span>提&nbsp;&nbsp;交&nbsp;&nbsp;注&nbsp;&nbsp;册</span></botton>
             </div>
         </div>
     </div>
