--- a/index_find_password.html
+++ b/index_find_password.html
@@ -48,7 +48,7 @@
                         <input type="button"  id="val" onclick="createCode()">
                     </div>
                 </div>
-                <button class="btn btn1" onclick="validate();getcode()" disabled>下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
+                <button class="btn btn1">下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
             </div>
             <div class="secondstep" style="display:none">
                 <p>验证码已发送到您的登录邮箱：<u></u></p>
@@ -76,7 +76,7 @@
                     </label>
                     <h4></h4>
                 </div>
-                <button class="btn btn3" onclick="updatepassword()">下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
+                <button class="btn btn3" onclick="updatepassword()" disabled>下&nbsp;&nbsp;一&nbsp;&nbsp;步</button>
             </div>
             <div class="laststep" style="display: none">
                 <div>
