--- a/more_information.html
+++ b/more_information.html
@@ -26,11 +26,11 @@
                     <button>考古动态</button>
                     <button>学术讲座</button>
                 </div>
-                <div class="part2">
-                    <div><input type="search" placeholder="按标题检索" id="searchtxt"><label for="searchtxt"><span>检索</span></label></div>
-                    <div><input type="search" placeholder="按时间检索" id="searchtime"><label for="searchtime"><span>检索</span></label></div>
-                    <div><input type="search" placeholder="按博物馆首字母检索" id="searchletter"><label for="searchletter"><span>检索</span></label></div>
-                </div>
+                <!--<div class="part2">-->
+                    <!--<div><input type="search" placeholder="按标题检索" id="searchtxt"><label for="searchtxt"><span>检索</span></label></div>-->
+                    <!--<div><input type="search" placeholder="按时间检索" id="searchtime"><label for="searchtime"><span>检索</span></label></div>-->
+                    <!--<div><input type="search" placeholder="按博物馆首字母检索" id="searchletter"><label for="searchletter"><span>检索</span></label></div>-->
+                <!--</div>-->
             </div>
             <div class="section2">
                 <p><span></span></p>
